# P3_AAU_Medialogy_Image_Processing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
ComputerVision/: Blob.cs  BlobDetector.cs  ComputerVision.csproj  ComputerVision.sln  Program.cs
ComputerVision/Properties/: AssemblyInfo.cs
ComputerVision/ShapeDetector/: Blob.cs  CCHandler.cs  ColorDetector.cs  ColorProcessing.cs  Command.cs  CommandConsole.cs  Converter.cs  Exporter.cs  Grassfire.cs  ImageHandler.cs  PixelHandler.cs  Program.cs  ShapeDetector.csproj  ShapeDetector.sln  Video_Device.cs
ComputerVision/ShapeDetector/Properties/: AssemblyInfo.cs
Game/Game_V1/PhysicsGame_P3_Data/: globalgamemanagers  level2  level4  sharedassets0.assets  sharedassets1.assets  sharedassets4.assets
Game/PhysicsGame_P3/: Assembly-CSharp.csproj  PhysicsGame_P3.sln
Game/PhysicsGame_P3_OLD/: Assembly-CSharp.csproj
Image Processing/: CMakeLists.txt  main.cpp
Image Processing/Image Processing/: main.cpp
Image Processing/Image Processing/Debug/: vc141.idb
Image Processing/Image Processing/Debug/Image Processing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Image Processing.lastbuildstate
Image Processing/Image Processing/Image Processing/: main.cpp
Image Processing/Image Processing/x64/Debug/: vc141.idb
Image Processing/Image Processing/x64/Debug/Image Processing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Image Processing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ThirdSemesterProject/: main.cpp
(+123 files in other folders)
